# bloaty-mcbloatface

./: .env.example  .env.template  .gitignore  CLAUDE.md  DESIGN_PRINCIPLES.md  DEVOPS.md  DIAGNOSIS_DEBUG_STATE.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  REDESIGN_SUMMARY.md  STATUS.md  claude.md  create_test_data.py  create_test_data.sql  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: security-audit.yml  test.yml
alembic/: env.py
alembic/versions/: 1c90b2c5ff87_add_diagnosis_tables.py  2a3b4c5d6e7f_add_mq_tables_and_fields.py  3b4c5d6e7f8g_add_auth_tables.py  431a799ebeb8_initial_schema_with_all_models.py  4c5d6e7f8g9h_add_discounted_ingredients.py  5acf901daa38_add_meal_status_field.py  5d6e7f8g9h0i_expand_source_tracking.py  61e8ee85c42e_add_meal_name_and_ai_tracking_fields.py  6d7c0be526eb_seed_initial_ingredient_categories.py  6e7f8g9h0i1j_add_meal_local_timezone.py  7f8g9h0i1j2k_add_copied_from_id_to_meals.py  a02d9fd847b2_initial_schema_with_all_models_and_.py  a1b2c3d4e5f6_add_meal_image_crop_coordinates.py  a20f1e06adcf_add_ai_generated_text_and_final_notes.py  c362f51a0834_add_symptom_tags_and_episodes.py  e54a8a4d88c9_merge_heads.py
app/: __init__.py  cli.py  config.py  database.py  main.py  seed_categories.py  seed_user.py
app/api/: admin.py  auth.py  diagnosis.py  diagnosis_sse.py  feedback.py  meals.py  routes.py  symptoms.py
app/models/: __init__.py  ai_usage_log.py  data_export.py  diagnosis_citation.py  diagnosis_feedback.py  diagnosis_result.py  diagnosis_run.py  discounted_ingredient.py  eval_run.py  ingredient.py  ingredient_category.py  ingredient_category_relation.py  invite.py  meal.py  meal_ingredient.py  session.py  symptom.py  user.py  user_feedback.py  user_settings.py
app/services/: __init__.py  admin_dashboard_service.py  ai_schemas.py  ai_service.py  ai_usage_service.py  (+8 more)
deploy/: .env.example  backup.sh  docker-compose.prod.yml  fetch-secrets.sh  setup-ec2.sh
docs/: ARCHITECTURE.md  DEVOPS.md  EVALS_STRATEGY.md  PRIVACY.md  SECURITY.md  STATUS.md  TESTING.md
evals/: __init__.py  config.py  judge_prompts.py  metrics.py  prompts.py  results.py  run.py
nginx/: nginx.conf
scripts/: download_eval_images.py  generate_eval_report.py  populate_dev_data.py
tests/: ORGANIZATION.md  README.md  __init__.py  conftest.py  factories.py  test_main.py  test_meal_search.py  test_meal_service.py  test_meals_api.py
(+107 files in other folders)
