[project]
name = "bloaty-mcbloatface"
version = "0.1.0"
description = "Meal tracking and gastro issue diagnosis app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "anthropic>=0.39.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "dramatiq[redis]>=1.17.0",
    "redis>=5.0.0",
    "sse-starlette>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
]
